# LexFlow

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .release-please-manifest.json  .repomixignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  architecture.md  docker-compose.yml  main.py  osv-scanner.toml  project-pitch.md  pyproject.toml  release-please-config.json  rxconfig.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic.yml  feature_request.yml
.github/workflows/: a11y.yml  auto-update-prs.yml  check-gitignore.yml  ci.yml  codeql.yml  deploy-landing.yml  docs.yml  e2e.yml  gitleaks.yml  labeler.yml  osv-scanner.yml  packaging.yml  release-please.yml  release.yml
architecture/: frontend.md  overview.md
contributing/: conventions.md
docs/: README.md  architecture.md
docs/_review/: backend-2026-05-22.md  landing-extra-audit-2026-05-23.md  landing-f1docs-animations-2026-05-23.md  landing-f1stratlab-animations-2026-05-23.md  proofread-pr163-2026-05-23.md
docs/architecture/: api-contract.md  backend.md  frontend.md  overview.md
docs/backend/: api-endpoints.md  chat-and-mcp.md  core-models.md  dashboards.md  graph.md
docs/contributing/: git-workflow.md  pull-requests.md
docs/frontend/: api-client.md  component-library.md  pages-and-routing.md  state-and-data.md
docs/getting-started/: installation.md  running-locally.md  troubleshooting.md
docs/operations/: ci-cd.md  observability.md  packaging.md
docs/planning/: ACCESSIBILITY.md  DISTRIBUTION.md  MCP-INTEGRATION.md  MODELS.md  ROADMAP-v2.md  UX-ONBOARDING.md
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/scripts/: a11y.mjs  gen-icons.mjs  shot-a11y-714.mjs  shot-ai.mjs  shot-citation.mjs  shot-comments.mjs  shot-installed.mjs  shot-resize.mjs  shot-rightrail.mjs  shot-semantic.mjs  shot-templates.mjs  shot-tour.mjs  shot-welcome.mjs  shot-wizard.mjs  shot.mjs
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: index.ts  schema.ts
frontend/src/components/: BrandMark.tsx
frontend/src/i18n/: index.ts
frontend/src/lib/: api.mock.ts  api.ts  comment-store.ts  confirm.ts  editor-store.ts  graph-colors.ts  greeting.test.ts  greeting.ts  hotkeys.ts  mock-data.ts  model-tiering.test.ts  model-tiering.ts  queries.ts  store.ts  telemetry.test.ts  telemetry.ts  template-store.ts  toast.ts  types.ts  useFocusTrap.ts  utils.test.ts  utils.ts
frontend/src/pages/: ChatPage.tsx  CommunitiesPage.test.tsx  CommunitiesPage.tsx  DashboardPage.tsx  DiffPage.tsx  EditorPage.tsx  ExplorerPage.tsx  GraphPage.tsx  HomePage.tsx  LawDetailPage.tsx  NotFoundPage.tsx  OnboardingPage.tsx  RelatedLaws.tsx  SearchResultsPage.tsx  SettingsPage.tsx
frontend/src/test/: setup.ts
frontend/tests/e2e/: command-palette.spec.ts  fixtures.ts  home-explorer.spec.ts  theme-persistence.spec.ts
landing/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
landing/public/: llms-full.txt  llms.txt  manifest.webmanifest  robots.txt  sitemap.xml
landing/scripts/: prerender.mjs  shot.mjs
landing/src/: LandingPage.tsx  icons.tsx  index.css  landing.css  main.tsx  vite-env.d.ts
landing/src/components/: RevealSection.tsx  SectionEyebrow.tsx  TerminalBlock.tsx
landing/src/hooks/: useLatestRelease.ts  useSpotlight.ts
landing/src/i18n/: index.ts
landing/src/lib/: render-bold.tsx  theme.ts
landing/src/mocks/: ApiFeature.tsx  ApiMockup.tsx  GraphMockup.tsx
landing/src/previews/: ChatPreview.tsx  DashboardPreview.tsx  GraphPreview.tsx  PreviewChrome.tsx  SearchPreview.tsx
landing/src/sections/: Authors.tsx  BuiltOn.tsx  CTA.tsx  DevContrib.tsx  Downloads.tsx  FAQ.tsx  Hero.tsx  HowItWorks.tsx  Layers.tsx  Nav.tsx  Personas.tsx  PoweredBy.tsx  Roadmap.tsx  Stack.tsx  StatBar.tsx  UserFlow.tsx  WhatIs.tsx
landing/src/styles/: base.css  content.css  faq-devzone.css  hero.css  mobile-sweep.css  sections.css
lexflow_app/: __init__.py  layout.py  lexflow_app.py
lexflow_app/components/: __init__.py  a11y.py  graph_filters.py  graph_view.py  node_detail_panel.py
lexflow_app/pages/: __init__.py  home.py  laws.py  laws_explorer.py
operations/: ci-cd.md
packaging/: backend.spec  build.py  lexflow.spec
planning/: INSTALL.md
scripts/: benchmark_retrieval.py  dev.ps1  qa_smoke.py  setup-github.sh
src/lexflow/: __init__.py
src/lexflow/api/: __init__.py  app.py  dependencies.py  error_handlers.py  middleware.py  spa.py  warmup.py
src/lexflow/chat/: __init__.py  base.py  db.py  mcp_client.py  mcp_server.py  provider_registry.py  rate_limit.py  schemas.py  secrets.py  storage_models.py  streaming.py
src/lexflow/core/: __init__.py  corpus_revision.py  delta_sync.py  enums.py  exceptions.py  git_history.py  health.py  law_aliases.py  metadata_cache.py  metadata_parser.py  models.py  parser.py  (+7 more)
tests/: conftest.py  test_article_endpoints.py  test_audit_canonical.py  test_audit_interop.py  test_audit_log.py  test_audit_policy.py  test_chat_providers.py  test_chat_stream_endpoint.py  test_chat_streaming.py  test_chat_threads.py  test_chat_tool_use_loop.py  test_cross_encoder_rerank.py  test_dashboards.py  test_dashboards_endpoint.py  test_delta_sync.py  test_file_discovery.py  test_filter_wiring.py  test_git_history.py  test_graph_apply_diff.py  test_graph_citation_resolution.py  test_graph_endpoints.py  test_graph_global_endpoint.py  test_graph_model.py  test_health.py  test_hybrid_search.py  test_law_aliases.py  test_law_endpoints.py  test_law_rank_enum.py  test_logging_middleware.py  test_mcp_bundles.py  test_mcp_client.py  test_mcp_server.py  test_mcp_server_audit.py  test_mcp_servers_endpoint.py  test_mcp_tools.py  test_metadata_cache.py  test_models.py  test_models_cache.py  test_models_endpoint.py  test_models_manage.py  (+29 more)
(+199 files in other folders)
