[project]
name = "lexflow"
version = "0.1.0"
description = "Open source platform for exploring, analyzing and querying Spanish legislation — powered by FastAPI, knowledge graphs and AI."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "VforVitorio" }]
keywords = ["legislation", "legal-tech", "spain", "fastapi", "knowledge-graph", "ai", "open-source"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "networkx>=3.4",
    "httpx>=0.28",
    "reflex>=0.7",
]

[project.optional-dependencies]
chat = [
    "fastmcp>=2.0",
    "ollama>=0.4",
    "openai>=1.60",
    "anthropic>=0.42",
    "google-genai>=1.5",
]
dashboards = [
    "plotly>=6.0",
]
packaging = [
    "pyinstaller>=6.0",
]
rag = [
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/VforVitorio/LexFlow"
Repository = "https://github.com/VforVitorio/LexFlow"
Issues = "https://github.com/VforVitorio/LexFlow/issues"

[project.scripts]
lexflow = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexflow"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["E501", "B008", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["lexflow"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["networkx.*", "ollama.*", "fastmcp.*", "plotly.*", "scipy.*", "faiss.*", "sentence_transformers.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
