[project]
name = "lexflow"
version = "0.75.0"
description = "Open source platform for exploring, analyzing and querying Spanish legislation — powered by FastAPI, knowledge graphs and AI."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "VforVitorio" }]
keywords = ["legislation", "legal-tech", "spain", "fastapi", "react", "knowledge-graph", "ai", "open-source"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.14.2",
    "networkx>=3.4",
    "numpy>=1.26",
    "scipy>=1.13",
    "httpx>=0.28",
    # Chat thread persistence (issue #83). Light dep — sits on SQLAlchemy
    # + Pydantic which we already use. Lets us define tables as Pydantic
    # models so the API and storage layers share one source of truth.
    "sqlmodel>=0.0.22",
    # Hardware detection for the model wizard (#117). psutil is
    # cross-platform and pynvml is NVIDIA-only but installs and imports
    # cleanly on non-NVIDIA hosts (it just reports no GPU). Both
    # stay in core deps because the /system/profile endpoint is
    # exposed in every build, not behind an extra.
    "psutil>=6.0",
    # nvidia-ml-py is the official NVIDIA NVML binding (`import pynvml`).
    # The legacy `pynvml` package on PyPI now emits a FutureWarning on
    # import and forwards to this one anyway, so we depend on the real
    # source. Installs cleanly on non-NVIDIA hosts — the binding only
    # fails when NVML init is actually called.
    "nvidia-ml-py>=12.0",
    # OS keyring for cloud-provider API keys (#120). On Windows uses
    # Credential Manager, on macOS Keychain, on Linux the freedesktop
    # Secret Service (gnome-keyring / kwallet). Pure-Python, no compiled
    # backend needed in CI — headless boxes get a no-op stub backend.
    "keyring>=25.0",
]

[project.optional-dependencies]
chat = [
    "fastmcp>=2.0",
    "ollama>=0.4",
    "openai>=1.60",
    "anthropic>=0.42",
    "google-genai>=1.5",
]
dashboards = [
    "plotly>=6.0",
]
# Real semantic search (#43). Heavy: pulls torch + transformers (~2 GB),
# so it is OPT-IN — core installs stay lean and CI does NOT install it
# (see ci.yml: the test/typecheck/pip-audit jobs use an explicit extra
# list, not --all-extras, to keep torch off the runners). Enable at
# runtime with LEXFLOW_EMBEDDER=sentence-transformers.
semantic = [
    "sentence-transformers>=3.0",
]
packaging = [
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "types-PyYAML>=6.0",
    "types-psutil>=6.0",
]

[project.urls]
Homepage = "https://github.com/VforVitorio/LexFlow"
Repository = "https://github.com/VforVitorio/LexFlow"
Issues = "https://github.com/VforVitorio/LexFlow/issues"

[project.scripts]
lexflow = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexflow"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = ["E501", "B008", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["lexflow"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# ``sentence_transformers`` is an optional ([semantic]) dep imported lazily
# in ``search/sentence_transformer_embedder.py``; it isn't installed in CI
# (torch is too heavy for the type/test jobs), so ignore its missing types.
module = ["networkx.*", "ollama.*", "fastmcp.*", "plotly.*", "pynvml.*", "sentence_transformers.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
